--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "hamburger-react": "^2.5.1",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1",
     "shadcn": "^1.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
