--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
+    "react-moment": "^1.1.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "shadcn": "^1.0.0",
