refactor: Update Vercel configuration to rewrite all routes to /app.js

--- a/js_backend/vercel.json
+++ b/js_backend/vercel.json
@@ -1,1 +1,1 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api/v1" }] }
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/app.js" }] }
