--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_REACT_APP_BACKEND_BASEURL= https://youtube-clone-bice-beta-69.vercel.app/
+VITE_REACT_APP_BACKEND_BASEURL= http://localhost:3000
