--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-iframe": "^1.8.5",
     "react-moment": "^1.1.3",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "shadcn": "^1.0.0",
