--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-iframe": "^1.8.5",
+    "react-modal": "^3.16.1",
     "react-moment": "^1.1.3",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
