--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_REACT_APP_BACKEND_BASEURL= https://yt-clone-backend-pi.vercel.app/
+VITE_REACT_APP_BACKEND_BASEURL= https://yt-clone-backend-pi.vercel.app
