--- a/js_backend/vercel.json
+++ b/js_backend/vercel.json
@@ -1,19 +1,23 @@
+
+
+
 {
-  "version": 2,
-  "builds": [
+    "version": 2,
+    "builds": [
       {
-          "src": "./src/index.js",
-          "use": "@vercel/node"
+        "src": "src/index.js", 
+        "use": "@vercel/node"
       }
-  ],
-  "routes": [
+    ],
+    "routes": [
       {
-          "src": "/(.*)",
-          "dest": "./src/index.js",
-          "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-          "headers":{
-              "Access-Control-Allow-Origin": "*"
-          }
+        "src": "/(.*)",
+        "dest": "src/index.js", 
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers": {
+          "Access-Control-Allow-Origin": "*"
+        }
       }
-  ]
-}
+    ]
+  }
+  
